--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World!
+<html>
+    <head>
+        <Title>Home page</Title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h3>
+            Welcome to my reporting website for Haaga-Helia's Go-programming course. </br>
+            This course is taught by Tero Karvinen (<a href="http://terokarvinen.com/">http://terokarvinen.com/</a>)
+        </h3>
+        <ul>
+            <li>
+                Day 1: <a href="https://pess1.github.io/go_course_day1_pesonen.htm">Day 1 report</a>
+            </li>
+            <li>
+                Day 2:
+            </li>
+            <li>
+                Day 3:
+            </li>
+            <li>
+                Day 4:
+            </li>
+            <li>
+                Day 5:
+            </li>
+        </ul>
+    </body>
+</html>
