--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 Day 1: <a href="https://pess1.github.io/go_course_day1_pesonen.htm">Day 1 report</a>
             </li>
             <li>
-                Day 2:
+                Day 2: <a href="https://pess1.github.io/go_course_day2_pesonen.htm">Day 2 report</a>
             </li>
             <li>
                 Day 3:
