--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Day 2: <a href="https://pess1.github.io/go_course_day2_pesonen.htm">Day 2 report</a>
             </li>
             <li>
-                Day 3:
+                Day 3: <a href="https://pess1.github.io/go_course_day3_pesonen.htm">Day 3 report</a>
             </li>
             <li>
                 Day 4:
