--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     </head>
     <body>
         <h3>
-            Welcome to my reporting website for Haaga-Helia's Go-programming course. </br>
+            Welcome to my () reporting website for Haaga-Helia's Go-programming course. </br>
             This course is taught by Tero Karvinen (<a href="http://terokarvinen.com/">http://terokarvinen.com/</a>)
         </h3>
+        <h3>=== Made by Arttu Pesonen: <a href="https://github.com/Pess1">Link to GitHub profile</a> ===</h3>
         <ul>
             <li>
                 Day 1: <a href="https://pess1.github.io/go_course_day1_pesonen.htm">Day 1 report</a>
@@ -19,10 +20,11 @@
                 Day 3: <a href="https://pess1.github.io/go_course_day3_pesonen.htm">Day 3 report</a>
             </li>
             <li>
-                Day 4:
+                Day 4: <a href="https://pess1.github.io/go_course_day4_pesonen.htm">Day 4 report</a>
             </li>
             <li>
-                Day 5:
+                <p>Day 5: No report for the final day. All I can say is that I enjoyed the course and it was very helpful.</p>
+                <p>Thanks for Tero Karvinen for keeping this course. Link to his website is at the top of this page. Go check it out!</p>
             </li>
         </ul>
     </body>
